force-app/main/default/objects/Trigger_Controller__mdt/fields/After_Undelete__c.field-meta.xml
<CustomField>
    <fullName>After_Undelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Undelete</label>
    <type>Checkbox</type>
</CustomField>