force-app/main/default/objects/Trigger_Controller__mdt/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <inlineHelpText>Apex trigger controller class name.</inlineHelpText>
    <label>Class Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>