force-app/main/default/objects/Trigger_Controller__mdt/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>