force-app/main/default/objects/Trigger_Controller__mdt/fields/Record_Exclusion_Field__c.field-meta.xml
<CustomField>
    <fullName>Record_Exclusion_Field__c</fullName>
    <description>Record field name that is used to exclude the matching record from execution.</description>
    <inlineHelpText>Record field name that is used to exclude the matching record from execution.</inlineHelpText>
    <label>Record Exclusion Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>