force-app/main/default/objects/Trigger_Controller__mdt/fields/Record_Exclusion_Value__c.field-meta.xml
<CustomField>
    <fullName>Record_Exclusion_Value__c</fullName>
    <inlineHelpText>Record field value that is used to exclude the matching record from execution.</inlineHelpText>
    <label>Record Exclusion Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>