force-app/main/default/objects/Trigger_Controller__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <inlineHelpText>Apex trigger controller execution sequence.</inlineHelpText>
    <label>Sequence</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>