force-app/main/default/objects/Trigger_Controller__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>Target sobject for the trigger</description>
    <inlineHelpText>Target sobject for the trigger</inlineHelpText>
    <label>SObject</label>
    <length>60</length>
    <type>Text</type>
</CustomField>