force-app/main/default/objects/Trigger_Controller__mdt/fields/User_Exclusion_Field__c.field-meta.xml
<CustomField>
    <fullName>User_Exclusion_Field__c</fullName>
    <inlineHelpText>User criteria that is used to skip the trigger execution.</inlineHelpText>
    <label>User Exclusion Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CustomPermission</fullName>
            </value>
            <value>
                <fullName>ProfileId</fullName>
            </value>
            <value>
                <fullName>UserType</fullName>
            </value>
            <value>
                <fullName>Username</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>