force-app/main/default/objects/Trigger_Controller__mdt/fields/User_Exclusion_Value__c.field-meta.xml
<CustomField>
    <fullName>User_Exclusion_Value__c</fullName>
    <inlineHelpText>User criteria value that is used to skip the trigger execution.</inlineHelpText>
    <label>User Exclusion Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>