force-app/main/default/objects/Trigger_Controller__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Class_Name__c</columns>
    <columns>SObject__c</columns>
    <columns>Sequence__c</columns>
    <columns>Before_Insert__c</columns>
    <columns>Before_Update__c</columns>
    <columns>Before_Delete__c</columns>
    <columns>After_Insert__c</columns>
    <columns>After_Update__c</columns>
    <columns>After_Delete__c</columns>
    <columns>After_Undelete__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>